# 2024-25-teama-rs

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  upload.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
.zed/: settings.json
src/: autonomous.rs  autons.rs  graphics.rs  main.rs  opcontrol.rs  subsystems.rs  utils.rs
src/autonomous/: auton_1.rs  auton_2.rs  blue_autonomous.rs  cluster_side.rs  five_ring.rs  five_ring_blue.rs  five_ring_red.rs  left_autonomous.rs  leftred_autonomous.rs  negative.rs  negative_touch.rs  new_auton.rs  noop.rs  positive.rs  red_autonomous.rs  right_autonomous revised.rs  right_autonomous.rs  right_autonomous_revised.rs  rightred_autonomous.rs  skills revised.rs  skills.rs  skills_revised.rs  stake_side.rs  test.rs
src/autons/: alliance_four.rs  five.rs  forward.rs  four.rs  negative_middle.rs  negative_rush.rs  negative_safe.rs  positive_awp.rs  positive_new.rs  positive_rush.rs  test.rs
src/opcontrol/: normal.rs  simple.rs
src/subsystems/: arm.rs  clamp.rs  doinker.rs  drivetrain.rs  drivetrain_actions.rs  intake.rs  lady_brown.rs
src/utils/: drivetrain.rs  intake.rs  logger.rs  motor_group.rs
