[package]
name = "teama-2024-25-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
log = "0.4.22"
pid = "4.0.0"
snafu = { version = "0.8.5", default-features = false, features = [
    "rust_1_61",
    "unstable-core-error",
] }
vexide = { git = "https://github.com/vexide/vexide.git", rev = "814c743a21474186b6e5cc09ccf3cde99c3b6bc2" }
