[package]
name = "teama-2024-25-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
log = "0.4.22"
pid = "4.0.0"
snafu = { version = "0.8.5", default-features = false, features = [
    "rust_1_61",
    "unstable-core-error",
] }
async-trait = "0.1.83"
doxa-selector = { git = "https://github.com/doxa-robotics/doxa-selector-rs.git", branch = "main", default-features = false }
vexide = { git = "https://github.com/vexide/vexide.git", branch = "test/patch-uploading" }

[profile.release]
strip = true
opt-level = "z"
lto = true

[features]
default = ["ui"]
ui = ["doxa-selector/ui"]
