[package]
name = "teama-2024-25-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true
upload-strategy = "differential"

[dependencies]
log = "0.4.22"
pid = "4.0.0"
snafu = { version = "0.8.5", default-features = false, features = [
    "rust_1_61",
    "unstable-core-error",
] }
async-trait = "0.1.83"
vexide = "0.7.0"
vexide-motorgroup = "2.0.0"
libdoxa = { path = "../libdoxa" }
colorsys = { version = "0.6.7", default-features = false }
autons = "0.1.0"
tinybmp = "0.6.0"
embedded-graphics = "0.8.1"
autons-controller = { git = "https://github.com/doxa-robotics/autons-controller.git", rev = "0fc31b22dd67b7655157c93667ccd061c5c6d9fc" }

[profile.release]
strip = true
opt-level = "z"
lto = true

[features]
default = []
simplified_controls = [] # simplified controls for interactive fundraising demos
no_selector = [
    "libdoxa/unsafe_debug_render",
] # immediately start the auton for debugging
